# APP_CMN

./: .gitignore  AppController.cpp  AutoTestPlanDialog.qml  AutoTestWindow.qml  CLAUDE.md  CMN_AutoTEST_Steps_new.xlsx  CMN_AutoTEST_Steps_v3.xlsx  CMakeLists.txt  CableCalibrationDialog.qml  CableCalibrationDialog.qmlc  CableListManager.cpp  CableListManager.h  Cable_TKC.xlsx  CmnAutoTestRunner.cpp  CmnAutoTestRunner.h  CmnAutoTestRunner.h.tmp.18880.7c8985c7fd6b  CmnAutoTestWindow.qml  CmnAutoTestWindow.qml.tmp.18880.82a12b313cab  ControllerBox.cpp  ControllerBox.h  DeviceConfigDialog.qml  FileHelper.cpp  FileHelper.h  Keithley2110.cpp  Keithley2110.h  Main.qml  MainContent.qml  ManualReadDialog.qml  ManualTestView.qml  McuSender.cpp  McuSender.h  MdlSeriesController.h  MrSeriesController.cpp  MrSeriesController.h  PROMPT_CMN_AutoTestRunner_v2.md  SM7110Reader.cpp  SM7110Reader.h  ScpiTcpClient.cpp  ScpiTcpClient.h  SignalMeasure.cpp  (+9 more)
.claude/: settings.local.json
code chuyển mạch nguồn/: Main.qml  main.cpp
code chuyển mạch nguồn/backend/: AppController.cpp  AppController.h  ControllerBox.cpp  ControllerBox.h  MdlSeriesController.cpp  MdlSeriesController.h  MrSeriesController.cpp  SignalMeasure.cpp  SignalMeasure.h
code chuyển mạch nguồn/components/: DeviceLight.qml  SectionBox.qml
code chuyển mạch nguồn/pages/: LoadPanel.qml  PowerPanel.qml  RelayPanel.qml  SignalPanel.qml
docs/: HIOKI_RM3544_Đọc_giá_trị.md  Luồng_Import_Excel_Tạo_Script.md  MCU_Packet_Format.md
